--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,7 @@ Colors:
 - Backgrounds - light dark blue #2f2c3d
 - Background, navbar - dark blue #262431
 - Input fields, text-box - light dark blue #423f52
-- Buttons, icons - blue #00c9db
+- Buttons, icons - blue #38AE9C
 - Body text, heading text - light gray #f1f1f8
 ******************************************/
 
@@ -112,7 +112,7 @@ a:hover {
 }
 
 .blue {
-	color: #00c9db;
+	color: #38AE9C;
 }
 
 .hr-heading {
@@ -121,11 +121,11 @@ a:hover {
 	height: 0.125rem;
 	margin-top: 0;
 	border: none;
-	background-color: #00c9db;
+	background-color: #F6E084;
 }
 
 .bg-dark-blue {
-	background-color: #262431;
+	background-color: #38AE9C;
 }
 
 .mb-6 {
@@ -139,9 +139,9 @@ a:hover {
 .btn-solid-reg {
 	display: inline-block;
 	padding: 1.375rem 2.25rem 1.375rem 2.25rem;
-	border: 1px solid #00c9db;
+	border: 1px solid #38AE9C;
 	border-radius: 2rem;
-	background-color: #00c9db;
+	background-color: #38AE9C;
 	color: #ffffff;
 	font-weight: 600;
 	font-size: 0.875rem;
@@ -151,18 +151,18 @@ a:hover {
 }
 
 .btn-solid-reg:hover {
-	border: 1px solid #00c9db;
+	border: 1px solid #38AE9C;
 	background-color: transparent;
-	color: #00c9db;
+	color: #38AE9C;
 	text-decoration: none;
 }
 
 .btn-solid-lg {
 	display: inline-block;
 	padding: 1.625rem 2.5rem 1.625rem 2.5rem;
-	border: 1px solid #00c9db;
+	border: 1px solid #38AE9C;
 	border-radius: 2rem;
-	background-color: #00c9db;
+	background-color: #38AE9C;
 	color: #ffffff;
 	font-weight: 600;
 	font-size: 0.875rem;
@@ -172,9 +172,9 @@ a:hover {
 }
 
 .btn-solid-lg:hover {
-	border: 1px solid #00c9db;
+	border: 1px solid #38AE9C;
 	background-color: transparent;
-	color: #00c9db;
+	color: #38AE9C;
 	text-decoration: none;
 }
 
@@ -360,9 +360,9 @@ input[type='checkbox'] {
 	display: inline-block;
 	width: 100%;
 	height: 3.125rem;
-	border: 1px solid #00c9db;
+	border: 1px solid #38AE9C;
 	border-radius: 0.375rem;
-	background-color: #00c9db;
+	background-color: #38AE9C;
 	color: #ffffff;
 	font-weight: 600;
 	font-size: 0.875rem;
@@ -372,9 +372,9 @@ input[type='checkbox'] {
 }
 
 .form-control-submit-button:hover {
-	border: 1px solid #00c9db;
+	border: 1px solid #38AE9C;
 	background-color: transparent;
-	color: #00c9db;
+	color: #38AE9C;
 }
 
 
@@ -473,7 +473,7 @@ input[type='checkbox'] {
 /*     Navigation     */
 /**********************/
 .navbar {
-	background-color: #262431;
+	background-color: #2f2c3d;
 	font-weight: 600;
 	font-size: 0.875rem;
 	line-height: 0.875rem;
@@ -536,7 +536,7 @@ input[type='checkbox'] {
 .navbar .nav-item.dropdown.show .nav-link,
 .navbar .nav-item .nav-link:hover,
 .navbar .nav-item .nav-link.active {
-	color: #00c9db;
+	color: #2f2c3d;
 }
 
 /* Dropdown Menu */
@@ -560,7 +560,7 @@ input[type='checkbox'] {
 	padding-top: 0.75rem;
 	padding-bottom: 0.75rem;
 	border: none;
-	background-color: #262431;
+	background-color: #2f2c3d;
 }
 
 .navbar .dropdown-item {
@@ -574,8 +574,8 @@ input[type='checkbox'] {
 }
 
 .navbar .dropdown-item:hover {
-	background-color: #262431;
-	color: #00c9db;
+	background-color: #2f2c3d;
+	color: #2f2c3d;
 }
 
 .navbar .dropdown-divider {
@@ -583,7 +583,7 @@ input[type='checkbox'] {
 	height: 1px;
 	margin: 0.5rem auto 0.5rem auto;
 	border: none;
-	background-color: #3a3942;
+	background-color: #2f2c3d;
 }
 /* end of dropdown menu */
 
@@ -599,7 +599,7 @@ input[type='checkbox'] {
 }
 
 .navbar .fa-stack-2x {
-	color: #00c9db;
+	color: #2f2c3d;
 	transition: all 0.2s ease;
 }
 
@@ -613,7 +613,7 @@ input[type='checkbox'] {
 }
 
 .navbar .fa-stack:hover .fa-stack-1x {
-	color: #00c9db;
+	color: #2f2c3d;
 }
 
 .navbar .navbar-toggler {
@@ -639,7 +639,7 @@ input[type='checkbox'] {
 }
 
 .header h1 #js-rotating {
-	color: #00c9db;
+	color: #38AE9C;
 }
 
 .header .p-large {
@@ -761,9 +761,9 @@ input[type='checkbox'] {
 
 .tabs .nav-link.active,
 .tabs .nav-link:hover {
-	border-bottom: 0.1875rem solid #00c9db;
+	border-bottom: 0.1875rem solid #38AE9C;
 	background-color: transparent;
-	color: #00c9db;
+	color: #38AE9C;
 }
 
 .tabs .nav-link .fas {
@@ -782,7 +782,7 @@ input[type='checkbox'] {
 }
 
 .tabs .fa-stack-2x {
-	color: #00c9db;
+	color: #38AE9C;
 }
 
 .tabs .fa-stack-1x {
@@ -892,7 +892,7 @@ input[type='checkbox'] {
 	width: 4.75rem;
 	height: 4.75rem;
 	border-radius: 50%;
-	background: #00c9db;
+	background: #38AE9C;
 	animation: pulse-border 1500ms ease-out infinite;
 	-webkit-transform: translateX(-50%) translateY(-50%);
 	-ms-transform: translateX(-50%) translateY(-50%);
@@ -909,7 +909,7 @@ input[type='checkbox'] {
 	width: 4.375rem;
 	height: 4.375rem;
 	border-radius: 50%;
-	background: #00c9db;
+	background: #38AE9C;
 	transition: all 200ms;
 	-webkit-transform: translateX(-50%) translateY(-50%);
 	-ms-transform: translateX(-50%) translateY(-50%);
@@ -993,7 +993,7 @@ input[type='checkbox'] {
 	margin-top: 0.125rem;
 	margin-bottom: 1rem;
 	margin-left: 0;
-	border-top: 0.125rem solid #00c9db;
+	border-top: 0.125rem solid #38AE9C;
 }
 
 .lightbox-basic h4 {
@@ -1006,7 +1006,7 @@ input[type='checkbox'] {
 }
 
 .lightbox-basic .list-unstyled .fas {
-	color: #00c9db;
+	color: #38AE9C;
 	font-size: 0.875rem;
 	line-height: 1.75rem;
 }
@@ -1030,7 +1030,7 @@ input[type='checkbox'] {
 }
 
 .lightbox-basic .btn-solid-reg.mfp-close:hover {
-	color: #00c9db;
+	color: #38AE9C;
 }
 /* end of action Button */
 
@@ -1113,7 +1113,7 @@ input[type='checkbox'] {
 .counter #counter .fas {
 	margin-bottom: 1rem;
 	font-size: 2.25rem;
-	color: #00c9db;
+	color: #38AE9C;
 }
 
 .counter #counter .counter-value {
@@ -1256,7 +1256,7 @@ input[type='checkbox'] {
 }
 
 .footer .footer-col.third .fa-stack .fa-stack-2x {
-	color: #3b384b;
+	color: #38AE9C;
 	transition: all 0.2s ease;
 }
 
@@ -1265,7 +1265,7 @@ input[type='checkbox'] {
 }
 
 .footer .footer-col.third .fa-stack:hover .fa-stack-2x {
-    color: #00c9db;
+    color: #38AE9C;
 }
 
 
@@ -1279,7 +1279,7 @@ input[type='checkbox'] {
 
 .copyright p,
 .copyright a {
-	color: #9f9caf;
+	color: #ffffff;
 	text-decoration: none;
 }
 
@@ -1296,7 +1296,7 @@ a.back-to-top {
 	width: 2.625rem;
 	height: 2.625rem;
 	border-radius: 1.875rem;
-	background: #5557da url("../images/up-arrow.png") no-repeat center 47%;
+	background: #38AE9C url("../images/up-arrow.png") no-repeat center 47%;
 	background-size: 1.125rem 1.125rem;
 	text-indent: -9999px;
 }
@@ -1315,7 +1315,7 @@ a:hover.back-to-top {
 }
 
 .ex-basic-1 .list-unstyled .fas {
-	color: #00c9db;
+	color: #38AE9C;
 	font-size: 0.375rem;
 	line-height: 1.75rem;
 }
@@ -1332,7 +1332,7 @@ a:hover.back-to-top {
 	width: 3rem;
 	height: 3rem;
 	border-radius: 50%;
-	background-color: #00c9db;
+	background-color: #38AE9C;
 	text-align: center;
 }
 
@@ -1348,11 +1348,11 @@ a:hover.back-to-top {
 
 .ex-basic-1 .text-box {
 	padding: 1.25rem 1.25rem 0.5rem 1.25rem;
-	background-color: #423f52;
+	background-color: #38AE9C;
 }
 
 .ex-basic-1 .text-box .text-box-icon {
-	color: #00c9db;
+	color: #38AE9C;
 	font-size: 2.5rem;
 }
 
@@ -1385,7 +1385,7 @@ a:hover.back-to-top {
 }
 
 .ex-cards-1 .card .fa-stack-2x {
-	color: #00c9db;
+	color: #38AE9C;
 }
 
 .ex-cards-1 .card .fa-stack-1x {
@@ -1434,14 +1434,14 @@ a:hover.back-to-top {
 .ex-cards-2 .card .currency {
 	position: relative;
 	margin-right: 0.25rem;
-	color: #00c9db;
+	color: #38AE9C;
 	font-weight: 600;
 	font-size: 1.5rem;
 	top: -1.125rem;
 }
 
 .ex-cards-2 .card .value {
-	color: #00c9db;
+	color: #38AE9C;
 	font-weight: 700;
 	font-size: 3.25rem;
 }
@@ -1463,7 +1463,7 @@ a:hover.back-to-top {
 }
 
 .ex-cards-2 .btn-solid-reg:hover {
-	border: 1px solid #00c9db;
+	border: 1px solid #38AE9C;
 	background-color: #ffffff;
 }
 
@@ -1500,14 +1500,14 @@ a:hover.back-to-top {
 .ex-cards-3 .card .currency {
 	position: relative;
 	margin-right: 0.25rem;
-	color: #00c9db;
+	color: #38AE9C;
 	font-weight: 600;
 	font-size: 1.5rem;
 	top: -1.125rem;
 }
 
 .ex-cards-3 .card .value {
-	color: #00c9db;
+	color: #38AE9C;
 	font-weight: 700;
 	font-size: 3.25rem;
 }
@@ -1522,7 +1522,7 @@ a:hover.back-to-top {
 }
 
 .ex-cards-3 .card .list-unstyled .fas {
-	color: #00c9db;
+	color: #38AE9C;
 	font-size: 1rem;
 	line-height: 1.75rem;
 }
@@ -1556,7 +1556,7 @@ a:hover.back-to-top {
 	width: 4.5rem;
 	height: 4.5rem;
 	border-radius: 50%;
-	background-color: #00c9db;
+	background-color: #38AE9C;
 	text-align: center;
 }
 
@@ -1590,7 +1590,7 @@ a:hover.back-to-top {
 }
 
 .ex-cards-4 .card .list-unstyled .fas {
-	color: #00c9db;
+	color: #38AE9C;
 	font-size: 0.375rem;
 	line-height: 1.75rem;
 }
@@ -1761,7 +1761,7 @@ a:hover.back-to-top {
 
 	.navbar.top-nav-collapse {
 		padding-top: 0.5rem;
-		background-color: #262431;
+		background-color: #2f2c3d;
 		box-shadow: 0 0.0625rem 0.375rem 0 rgba(0, 0, 0, 0.3);
 	}
 
@@ -2032,7 +2032,7 @@ a:hover.back-to-top {
 	}
 
 	.tabs #tab-1 .list-unstyled {
-		margin-top: 3.875rem;
+		margin-top: 1.5rem;
 	}
 
 	.tabs #tab-1 .li-space-lg li {
@@ -2046,7 +2046,7 @@ a:hover.back-to-top {
 	}
 
 	.tabs #tab-2 h3 { 
-		margin-top: 0.5rem;
+		margin-top: 1.5rem;
 	}
 
 	.tabs #tab-2 .list-unstyled {
@@ -2179,6 +2179,10 @@ a:hover.back-to-top {
 		text-align: right;
 	}
 	/* end of footer */
+
+	.copyright {
+		margin-top: 0rem;
+	}
 
 
 	/* Extra Pages */
